--- a/SignUp/main.html
+++ b/SignUp/main.html
@@ -1,5 +1,5 @@
 <html><head>
-<title></title><script>
+<title>hacktoberfest</title><script>
         function myFunction() {
           setTimeout(function(){ window.location.href="Form.php";}, 1500);
         }
